ajustando cadena de conexión migrando desde AppSettings.JSON

--- a/BlazorCrud.Server/appsettings.json
+++ b/BlazorCrud.Server/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "CadenaSQL": "Data Source=DESKTOP-UJ2B95O;Initial Catalog=DBCrudBlazor;Integrated Security=True; Trusted_Connection=True; TrustServerCertificate=True;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
